kubernetes/staging/daedalus-project-docs-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: daedalus-project-docs-staging-staging
  name: daedalus-project-docs-staging
  labels:
    app: daedalus-project-docs-staging
spec:
  selector:
    matchLabels:
      app: nginx
      role: project-docs-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        role: project-docs-staging
    spec:
      containers:
      - name: daedalus-project-docs-nginx
        image: daedalusproject/daedalus-project-docs-develop:__IMAGE_TAG__
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
        ports:
        - containerPort: 80
