kubernetes/staging/daedalus-project-docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: daedalus-project-docs-staging
  name: daedalus-project-docs-staging
  labels:
    app: nginx
    role: project-docs-staging
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nginx
    role: project-docs-staging
