kubernetes/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: daedalus-project-docs-staging
  name: daedalus-project-docs-staging-ingress
  annotations:
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: staging-docs.daedalus-project.io
   http:
     paths:
     - path: /
       backend:
         serviceName: daedalus-project-docs-staging
         servicePort: 80

 tls:
 - hosts:
   - staging-docs.daedalus-project.io
   secretName: daedalus-project-docs-staging-cert
